--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -36,7 +36,7 @@
     "> [Do Not Copy-Paste.](https://docs.google.com/document/d/1ubOw9B3Hfip27hF2ZFnW3a3z9xAgrUDRReOEo-FHCVs/edit) You must type each of these exercises in, manually. If you copy and paste, you might as well not even do them. The point of these exercises is to train your hands, your brain, and your mind in how to read, write, and see code. If you copy-paste, you are cheating yourself out of the effectiveness of the lessons.\n",
     "\n",
     "If your **Plotly** visualizations aren't working:\n",
-    "- You must have JavaScript enabled in your browser\n",
+    "- You must . have JavaScript enabled in your browser\n",
     "- You probably want to use Chrome or Firefox\n",
     "- You may need to turn off ad blockers\n",
     "- [If you're using Jupyter Lab locally, you need to install some \"extensions\"](https://plot.ly/python/getting-started/#jupyterlab-support-python-35)\n",
