--- a/module3-ridge-regression/LS_DS_213.ipynb
+++ b/module3-ridge-regression/LS_DS_213.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -89,6 +89,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
     "\n",
     "# Read New York City apartment rental listing data\n",
     "df = pd.read_csv(DATA_PATH+'apartments/renthop-nyc.csv')\n",
@@ -122,13 +123,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['bathrooms', 'bedrooms', 'latitude', 'longitude', 'price', 'elevator',\n",
+       "       'cats_allowed', 'hardwood_floors', 'dogs_allowed', 'doorman',\n",
+       "       'dishwasher', 'no_fee', 'laundry_in_building', 'fitness_center',\n",
+       "       'pre-war', 'laundry_in_unit', 'roof_deck', 'outdoor_space',\n",
+       "       'dining_room', 'high_speed_internet', 'balcony', 'swimming_pool',\n",
+       "       'new_construction', 'terrace', 'exclusive', 'loft', 'garden_patio',\n",
+       "       'wheelchair_access', 'common_outdoor_space'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "df.describe(include='number').columnsumns"
    ]
   },
   {
@@ -975,9 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import display, HTML\n",
@@ -1110,9 +1128,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
