--- a/module4-logistic-regression/LS_DS_213_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_213_assignment.ipynb
@@ -677,8 +677,7 @@
     "# .fit_transform on the train set\n",
     "# .transform on test set\n",
     "\n",
-    "X_train_selected = selector.fit_transform(X_train, y_train)\n",
-    "X_test_selected = selector.transform(X_test)"
+    "X_train_selected = selector.fit_transform(X_train, y_train)\n"
    ]
   },
   {
