--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -913,8 +913,87 @@
         "\n",
         "\n"
       ],
-      "execution_count": 108,
+      "execution_count": 167,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0OFWBKsQU0r7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 269
+        },
+        "outputId": "1137d4db-3c33-4811-c905-0c466abe3844"
+      },
+      "source": [
+        "Xtest.info"
+      ],
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method DataFrame.info of        price\n",
+              "32970   4950\n",
+              "43395   1650\n",
+              "6294    3350\n",
+              "46508   3490\n",
+              "19725   1950\n",
+              "...      ...\n",
+              "15029   2500\n",
+              "35307   3300\n",
+              "42913   5700\n",
+              "107     2250\n",
+              "9135    2400\n",
+              "\n",
+              "[12205 rows x 1 columns]>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 166
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wtjGr91-Tl6h",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "3eefc7d4-4c41-418c-9e01-e3e7f25bad51"
+      },
+      "source": [
+        "# We could also do this mannually\n",
+        "#Ytest = [[8000],[7900]]\n",
+        "# Xtest = [[5],[2]]\n",
+        "\n",
+        "# y_pred = model.predict(Xtest)\n",
+        "# y_pred"
+      ],
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[6534.24498682],\n",
+              "       [3974.48248423]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 158
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1026,27 +1105,24 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 53
         },
-        "outputId": "452a9d58-274b-47f3-d916-09984fb5484f"
+        "outputId": "9496b66c-3be2-4cbe-91d6-0c50761f1e45"
       },
       "source": [
         "#6.look at the coef_ and intercept_ attributes of the LinearRegression\n",
-        "model.coef_"
+        "print('coefficient:',model.coef_)\n",
+        "print('intercept:',model.intercept_)"
       ],
-      "execution_count": 113,
+      "execution_count": 170,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[853.25416753]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 113
+          "output_type": "stream",
+          "text": [
+            "coefficient: [[853.25416753]]\n",
+            "intercept: [2267.97414918]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -1059,7 +1135,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
-        "outputId": "fdebfb10-4f4e-49ac-eb7e-104be8674ced"
+        "outputId": "fe3a5bc2-eb0d-4de9-d979-c8e224adecf0"
       },
       "source": [
         "#7.create function to preduct prices based on bedrooms\n",
@@ -1081,7 +1157,7 @@
         "\n",
         "predict(4)\n"
       ],
-      "execution_count": 114,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
