--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -968,7 +968,7 @@
       },
       "source": [
         "# We could also do this mannually\n",
-        "#Ytest = [[8000],[7900]]\n",
+        "#Ytest = [[8000,7900]]\n",
         "# Xtest = [[5],[2]]\n",
         "\n",
         "# y_pred = model.predict(Xtest)\n",
@@ -1218,6 +1218,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7TPRmhel9LKR",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **#STRECH** **GOALS**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "_8GnDAv-nGM4",
@@ -1440,6 +1450,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BtDHVUiK9B1O",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **SCIKIT LEARN BY HAND**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "BvxOrZswoPia",
@@ -1530,6 +1550,240 @@
           "text": [
             "Training MAE: 820.7052924091687\n",
             "Testing MAE: 825.4385472797375\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tICSdAqyybZj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8730aa2e-845c-4e78-d002-f59809f993cd"
+      },
+      "source": [
+        "#manually doing train test split\n",
+        "features = ['bedrooms']\n",
+        "target = ['price']\n",
+        "x_train = df[features]\n",
+        "y_train = df[target]\n",
+        "#single dimension\n",
+        "x_train.shape,y_train.shape"
+      ],
+      "execution_count": 271,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((48818, 1), (48818, 1))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 271
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oahCjcsI3mbV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a9c33b08-857a-402d-c631-5d6dc9161721"
+      },
+      "source": [
+        "#model fit\n",
+        "#info saved in the model\n",
+        "model.fit(x_train,y_train)"
+      ],
+      "execution_count": 272,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 272
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4MAUT2qv77sA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "b77e4806-a1e4-4577-f3e0-b60bfe6b3fff"
+      },
+      "source": [
+        "#arbitraly looking for x and y testing values\n",
+        "df[['bedrooms','price']].head()"
+      ],
+      "execution_count": 294,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>bedrooms</th>\n",
+              "      <th>price</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3</td>\n",
+              "      <td>3000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>5465</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>2850</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3275</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>3350</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   bedrooms  price\n",
+              "0         3   3000\n",
+              "1         2   5465\n",
+              "2         1   2850\n",
+              "3         1   3275\n",
+              "4         4   3350"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 294
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UEGvddgD311g",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "bathrooms = [3,2]\n",
+        "import numpy as np\n",
+        "#transpose otherwise u will get error matmul: Input operand 1 has a mismatch in its core dimension 0\n",
+        "x_test = np.array([bathrooms]).T\n",
+        "y_pred = model.predict(x_test)\n",
+        "#apply model to new data\n",
+        "#need double brackets b/c scikit learn takes multidim input\n",
+        "y_test = np.array([[300,5465]]).T"
+      ],
+      "execution_count": 298,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NWF86XVR6_Qn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ac3de3b8-3855-4760-94f8-43df86daea24"
+      },
+      "source": [
+        "x_test.shape, y_test.shape\n"
+      ],
+      "execution_count": 299,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((2, 1), (2, 1))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 299
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wwk4XByf8Zi3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "9a4f9b5c-b3fb-4c0c-bf1a-453f5688c61c"
+      },
+      "source": [
+        "print('Training MAE:', mean_absolute_error(y_train,model.predict(x_train)))\n",
+        "print('Testing MAE:', mean_absolute_error(y_test,y_pred))"
+      ],
+      "execution_count": 297,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Training MAE: 975.6559731054491\n",
+            "Testing MAE: 3009.1270837637157\n"
           ],
           "name": "stdout"
         }
