--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -1432,16 +1432,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "BtDHVUiK9B1O",
-        "colab_type": "text"
-      },
-      "source": [
-        "# **SCIKIT LEARN BY HAND**"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "BvxOrZswoPia",
@@ -1535,6 +1525,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "LKjhVYRe_FEd"
+      },
+      "source": [
+        "# **SCIKIT LEARN BY HAND**"
       ]
     },
     {
