--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -1471,7 +1471,7 @@
         "outputId": "fd502190-f9da-4023-f0b5-06434dadd05b"
       },
       "source": [
-        "#7.create function to preduct prices based on bedrooms\n",
+        "#7.create function to preduct prices based on bedrooms and bathrooms\n",
         "def predict(bedrooms,bathrooms):\n",
         "    y_pred = model.predict([[bedrooms,bathrooms]])\n",
         "    estimate = y_pred[0]\n",
