--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -1257,7 +1257,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Regression Metrics (Aka: Tests Evaulating Results of Prediction)**"
+        "# Basic Example "
       ]
     },
     {
@@ -1324,34 +1324,6 @@
         "b = y_train.mean()  \n",
         "y_pred = m*x + b\n",
         "\n",
-        "\n"
-      ],
-      "execution_count": 101,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "A18j8HqcJjQO",
-        "colab_type": "text"
-      },
-      "source": [
-        "# **Regression Metrics (Aka: Tests Evaulating Results of Prediction)**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5sZlCWrBI81Y",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 89
-        },
-        "outputId": "8ae406f3-abd1-44e3-87fd-781321c9719b"
-      },
-      "source": [
-        "   \n",
         "# Print regression metrics\n",
         "mse = mean_squared_error(y, y_pred)\n",
         "rmse = np.sqrt(mse)\n",
@@ -1360,21 +1332,10 @@
         "print('Mean Squared Error:', mse)\n",
         "print('Root Mean Squared Error:', rmse)\n",
         "print('Mean Absolute Error:', mae)\n",
-        "print('R^2:', r2)"
+        "print('R^2:', r2)\n"
       ],
-      "execution_count": 102,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mean Squared Error: 3106114.4480853886\n",
-            "Root Mean Squared Error: 1762.4172173709007\n",
-            "Mean Absolute Error: 1200.4304876374647\n",
-            "R^2: -5.102951728508387e-06\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 101,
+      "outputs": []
     }
   ]
 }
