--- a/module2-regression-2/Jeremy_Spradlin_LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/Jeremy_Spradlin_LS_DS_212_assignment.ipynb
@@ -2444,6 +2444,263 @@
         "#Instantiate the class\n",
         "lr = LinearRegression()"
       ],
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "knoXTMlWlkFk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Create a features variable that contain our features\n",
+        "features = ['total_rooms', 'total_perks']"
+      ],
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0HItETcjmCYu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "248eca56-d791-45c9-d58b-6d13f148c5aa"
+      },
+      "source": [
+        "#Fit the model to the data\n",
+        "lr.fit(X_train[features], y_train)"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MdfJCuEpmJAs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ab17775f-d9b4-4115-c375-23016f218c83"
+      },
+      "source": [
+        "#Determine the MAE on the trained model\n",
+        "mae = mean_absolute_error(y_train, lr.predict(X_train[features]))\n",
+        "print('Training error on trained model is:', mae)"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Training error on trained model is: 858.0439346968129\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "za25zoKWmWCM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1a2b7b2d-6c5c-4f9c-c9c1-61ff359ad298"
+      },
+      "source": [
+        "#Apply the model to new data\n",
+        "mae = mean_absolute_error(y_test, lr.predict(X_test[features]))\n",
+        "print('Testing error on testing model is:', mae)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Testing error on testing model is: 869.8687719595355\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6wBuo0gOmqvi",
+        "colab_type": "text"
+      },
+      "source": [
+        "### The error on the trained model is several hundred points lower than the error on the untrained model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IIlnjy6Hqq_0",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Getting the metrics from my model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OojIpoDsm4BY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "2f03877a-9457-4b19-beda-66c5c1770c05"
+      },
+      "source": [
+        "#Determine the coefficients and intercept\n",
+        "intercept = lr.intercept_\n",
+        "coefficients = lr.coef_\n",
+        "\n",
+        "print('The intercept on the trained model is:', intercept)\n",
+        "print('The coeeficients of the trained model are:', coefficients)"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The intercept on the trained model is: 1017.4639584266802\n",
+            "The coeeficients of the trained model are: [769.6275206   94.06525506]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FXWtqyifqoPw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "31b7da84-b331-4c20-be9d-dc7354bb06b4"
+      },
+      "source": [
+        "#Obtaining regression metrics on the datasets\n",
+        "#Regression metrics for the training dataset\n",
+        "\n",
+        "#Import from scikit-learn for additional regression metrics\n",
+        "from sklearn.metrics import mean_squared_error, r2_score\n",
+        "import numpy as np\n",
+        "\n",
+        "#MAE\n",
+        "mae = mean_absolute_error(y_train, lr.predict(X_train[features]))\n",
+        "\n",
+        "#RMSE\n",
+        "mse = mean_squared_error(y_train, lr.predict(X_train[features]))\n",
+        "rmse = np.sqrt(mse)\n",
+        "\n",
+        "#R^2\n",
+        "r2 = r2_score(y_train, lr.predict(X_train[features]))\n",
+        "\n",
+        "print('Regression statistics for trained model are:')\n",
+        "print('MAE: ', mae)\n",
+        "print('MSE: ', mse)\n",
+        "print('RMSE: ', rmse)\n",
+        "print('R^2: ', r2)"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Regression statistics for trained model are:\n",
+            "MAE:  858.0439346968129\n",
+            "MSE:  1683420.608273231\n",
+            "RMSE:  1297.4669969880663\n",
+            "R^2:  0.45789983652175403\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9JxMa80arOCf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "424cd5f1-507b-4efc-fd35-9b93dd4175d7"
+      },
+      "source": [
+        "#Regression statistics for the testing dataset\n",
+        "#MAE\n",
+        "mae = mean_absolute_error(y_test, lr.predict(X_test[features]))\n",
+        "\n",
+        "#RMSE\n",
+        "mse = mean_squared_error(y_test, lr.predict(X_test[features]))\n",
+        "rmse = np.sqrt(mse)\n",
+        "\n",
+        "#R^2\n",
+        "r2 = r2_score(y_test, lr.predict(X_test[features]))\n",
+        "\n",
+        "print('Regression statistics for trained model are:')\n",
+        "print('MAE: ', mae)\n",
+        "print('MSE: ', mse)\n",
+        "print('RMSE: ', rmse)\n",
+        "print('R^2: ', r2)"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Regression statistics for trained model are:\n",
+            "MAE:  869.8687719595355\n",
+            "MSE:  1677607.7906120429\n",
+            "RMSE:  1295.224996134665\n",
+            "R^2:  0.4602328471931084\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VDA8pSAotQ18",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
       "execution_count": null,
       "outputs": []
     }
